# agri_resources

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
config/camera/d435_realsense/: color_640x480.yaml  left_424x240.yaml  left_480x270.yaml  model.yaml  right_424x240.yaml  right_480x270.yaml  right_640x480.yaml
config/d2slam/: consensus.yaml  experiment.yaml  fast.yaml  orin_nx.yaml  orin_nx_distrib.yaml  vanilla.yaml
config/drones/crazyflie/: vins.yaml
config/drones/duckey/: bee.yaml  bee_distrib.yaml  config.yaml  d435_multi.yaml  d435_multi_rt.yaml  d435_multi_rt_low_reso.yaml  d435_single.yaml  ego.yaml  ego_low_reso.yaml  linux_laptop.yaml  (+5 more)
config/ego_planner/: experiment.yaml  fast.yaml  mocap.yaml
config/imu/: kakute_h7_mini.yaml
config/mavros/: apm_config.yaml  apm_pluginlists.yaml
config/mocap/: initiate.yaml
launch/: demo.launch  display_model.launch  natnet_ros.launch  rviz.launch  rviz_lcm.launch
models/drone_0_with_camera/: model.sdf
models/drone_0_with_realsense/: model.sdf  test.sdf
models/drone_1_with_camera/: model.sdf
models/iris_base/: model.sdf
rviz/: d2slam.rviz  external_nav.rviz  gps.rviz  mito_demo.rviz  model_display.rviz  particle_filter.rviz  vision_demo.rviz
scripts/: ap_param_update.sh  demo.sh  fcu_comm.sh  network_switch.sh  setup_mocap.sh  setup_rviz.sh  setup_rviz_mocap.sh
urdf/drones/: cf2x.urdf  duckey.urdf  iris.xacro  iris_with_realsense.xacro  multirotor_base.xacro
worlds/: 0120.world  0120_2.world  0120_3.world  demo copy.world  demo.world  empty.world  forest.world  hill.world  playground.world
(+7 files in other folders)
